## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

boxed_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

boxed_pixmaps_DATA = \
	boxed_icon.ico

EXTRA_DIST = $(boxed_pixmaps_DATA)
